# ragbacker

./: .env copy  Procfile  main.py  nextCloud.py  pyproject.toml  requirements.txt  tmp_image.wmf  wd_test.py
app/: settings.py
app/api/routers/: import base64.py  ingest copy 2.py  ingest copy 3.py  ingest copy 4.py  ingest copy 5.py  ingest copy.py  ingest.py  metadata.py
app/engine/: generate.py
app/engine/loaders/: __init__.py  file copy.py  file.py  file_old.py
config/: loaders.yaml
