[tool]
[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Marcus Schiesser <mail@marcusschiesser.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.9, <3.13"
fastapi = "^0.109.1"
python-dotenv = "^1.0.0"
llama-index = "0.10.15"
llama-index-core = "0.10.15"
llama-index-agent-openai = "0.1.5"
pydantic = "^2.0"
sqlalchemy = "^1.4.22"
psycopg2-binary = "^2.9"
pypdf = "^4.2.0"
PyPDF2 = "^3.0.1"
PySocks = "^1.7.1"
python-docx = "^1.1.0"
python-multipart = "^0.0.9"
python-pptx = "^0.6.23"
python-slugify = "^8.0.4"
webdavclient3 = "^3.14.6"
aiohttp = "^3.9.5"
nest-asyncio = "^1.6.0"
firebase-admin = "^6.5.0"
[tool.poetry.dependencies.uvicorn]
extras = ["standard"]
version = "^0.23.2"

[tool.poetry.dependencies.llama-index-vector-stores-pinecone]
version = "^0.1.3"

[tool.poetry.dependencies.docx2txt]
version = "^0.8"

[tool.poetry.dependencies.llama-index-readers-web]
version = "^0.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
